# pydj

./: README.md  app.py  demo.py  main.py  pyproject.toml  requirements.txt  showcase.py
glaucus/config/: app_config.py
glaucus/db/: connection.py  datasource.py
glaucus/domain/: __init__.py  customer.py
glaucus/repository/: __init__.py  crud.py  customer.py
glaucus/service/: __init__.py  customer.py
glaucus/utils/: __init__.py  common_utils.py
glaucus/web/rest/: __init__.py  customer.py
misc/: car.py  walk.py
pydj/: __init__.py  app.py  pydj.py  utils.py
pydj/decorator/: __init__.py  get.py  rest.py  service.py
pydj/di/: __init__.py  application_context.py  bean.py  context.py  globals.py  gobal.py  ref.py  utils.py
pydj/di/decorator/: __init__.py  bean.py  component.py  configuration.py  controller.py  repository.py  service.py
pydj/di/decorator/rest/: __init__.py  delete.py  get.py  patch.py  post.py  put.py  rest.py
pydj/di/internal/: bean.py  ref.py  register_info.py
pydj/domain/: customer.py
pydj/repository/: __init__.py  customer.py  jpa.py
pydj/service/: __init__.py  customer.py
pydj/tools/: decorator.py
pydj/utils/: __init__.py  common.py  common_utils.py
pydj/web/rest/: customer.py
tests/utils/: test_common_utils.py  test_math_utils.py  test_utils.py
