[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydj"
version = "0.0.1"
authors = [
  { name="Hoang Nguyen", email="hoangen@gmail.com" },
]
description = "A IoC container for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"